--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,4 +54,4 @@ jobs:
           uses: docker/build-push-action@v2
           with:
             push: true
-            tags: bog2530/test:latestname:
+            tags: bog2530/test:lates
